unpackaged/main/default/objects/User/fields/aprobador__c.field-meta.xml
<CustomField>
    <fullName>aprobador__c</fullName>
    <label>Aprobador</label>
    <relationshipName>Usuarios</relationshipName>
    <restrictedAdminField>true</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>