unpackaged/main/default/objects/User/fields/aprobador_de_casos__c.field-meta.xml
<CustomField>
    <fullName>aprobador_de_casos__c</fullName>
    <label>Aprobador de casos</label>
    <relationshipName>Usuarios1</relationshipName>
    <restrictedAdminField>true</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>