unpackaged/main/default/objects/User/fields/Aprobador_Lista_Vivienda__c.field-meta.xml
<CustomField>
    <fullName>Aprobador_Lista_Vivienda__c</fullName>
    <label>Aprobador Lista Vivienda</label>
    <relationshipName>Listas_Vivienda</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>