unpackaged/main/default/objects/User/fields/Cartera_IS__c.field-meta.xml
<CustomField>
    <fullName>Cartera_IS__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cartera IS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>