unpackaged/main/default/objects/User/fields/Cartera_RES__c.field-meta.xml
<CustomField>
    <fullName>Cartera_RES__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cartera RES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>