unpackaged/main/default/objects/User/fields/Cartera_Total__c.field-meta.xml
<CustomField>
    <fullName>Cartera_Total__c</fullName>
    <formula>Cartera_IS__c + Cartera_RES__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cartera Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>