unpackaged/main/default/objects/User/fields/Correoelectronico_alterno__c.field-meta.xml
<CustomField>
    <fullName>Correoelectronico_alterno__c</fullName>
    <label>Correo electrónico alterno</label>
    <type>Email</type>
</CustomField>