unpackaged/main/default/objects/User/fields/Editar_rol_de_venta__c.field-meta.xml
<CustomField>
    <fullName>Editar_rol_de_venta__c</fullName>
    <description>Campo utilizado para validar si los usuarios con algun valor en este campo pueden modificar algun rol de venta en especifico en el objeto proceso de venta si el estatus es &quot;Escriturado&quot; o &quot;Entregado&quot;</description>
    <label>Editar rol de venta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asesor</fullName>
            </value>
            <value>
                <fullName>Prospectador</fullName>
            </value>
            <value>
                <fullName>Lead Profiler</fullName>
            </value>
            <value>
                <fullName>Colaborador Javer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>