unpackaged/main/default/objects/User/fields/Email_Aprobador_Delegado__c.field-meta.xml
<CustomField>
    <fullName>Email_Aprobador_Delegado__c</fullName>
    <label>Email Aprobador Delegado</label>
    <type>Email</type>
</CustomField>