unpackaged/main/default/objects/User/fields/Email_del_Gerente__c.field-meta.xml
<CustomField>
    <fullName>Email_del_Gerente__c</fullName>
    <formula>Gerente__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email del Gerente</label>
    <type>Text</type>
</CustomField>