unpackaged/main/default/objects/User/fields/EmpId1__c.field-meta.xml
<CustomField>
    <fullName>EmpId1__c</fullName>
    <label>EmpId1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>