unpackaged/main/default/objects/User/fields/EmpId__c.field-meta.xml
<CustomField>
    <fullName>EmpId__c</fullName>
    <label>EmpId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>