unpackaged/main/default/objects/User/fields/Fracc_Debug__c.field-meta.xml
<CustomField>
    <fullName>Fracc_Debug__c</fullName>
    <label>Fracc Debug</label>
    <length>255</length>
    <type>Text</type>
</CustomField>