unpackaged/main/default/objects/User/fields/Fraccionamiento_autorizado__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamiento_autorizado__c</fullName>
    <inlineHelpText>Al poner la Palabra TODOS 
lo que dará acceso a cualquier fracc.</inlineHelpText>
    <label>Fraccionamiento autorizado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>