unpackaged/main/default/objects/User/fields/FraccionamientoAutorizados__c.field-meta.xml
<CustomField>
    <fullName>FraccionamientoAutorizados__c</fullName>
    <label>Fraccionamiento Autorizados</label>
    <length>255</length>
    <type>Text</type>
</CustomField>