unpackaged/main/default/objects/User/fields/FRACCIONAMIENTOS__c.field-meta.xml
<CustomField>
    <fullName>FRACCIONAMIENTOS__c</fullName>
    <label>FRACCIONAMIENTOS</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACACIAS</fullName>
            </value>
            <value>
                <fullName>ACACIAS II</fullName>
            </value>
            <value>
                <fullName>ALBERI RESIDENCIAL</fullName>
            </value>
            <value>
                <fullName>ALVENTO</fullName>
            </value>
            <value>
                <fullName>ARBOLADA</fullName>
            </value>
            <value>
                <fullName>BOSQUE REAL</fullName>
            </value>
            <value>
                <fullName>BOSQUES DEL NEVADO</fullName>
            </value>
            <value>
                <fullName>MAGNOLIAS IV</fullName>
            </value>
            <value>
                <fullName>MISION DE LOS ANGELES 1ER SECTOR ARCANGELES</fullName>
            </value>
            <value>
                <fullName>MURIEL RESIDENCIAL</fullName>
            </value>
            <value>
                <fullName>PASEO SAN JUNIPERO</fullName>
            </value>
            <value>
                <fullName>PASEOS DEL SUR</fullName>
            </value>
            <value>
                <fullName>PRIVADA BELTERRA</fullName>
            </value>
            <value>
                <fullName>PRIVADAS CARANDAY</fullName>
            </value>
            <value>
                <fullName>PRIVALIA AMBIENTA</fullName>
            </value>
            <value>
                <fullName>TODOS</fullName>
            </value>
            <value>
                <fullName>VALLE DE LINCOLN SECTOR MINAS</fullName>
            </value>
            <value>
                <fullName>VALLE DE SANTA ELENA</fullName>
            </value>
            <value>
                <fullName>VALLE DE TEJEDA II</fullName>
            </value>
            <value>
                <fullName>VALLE SANTA ISABEL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>