unpackaged/main/default/objects/User/fields/Gerente__c.field-meta.xml
<CustomField>
    <fullName>Gerente__c</fullName>
    <label>Gerente</label>
    <relationshipName>Gerente</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>