unpackaged/main/default/objects/User/fields/Id_Lead_Profiler__c.field-meta.xml
<CustomField>
    <fullName>Id_Lead_Profiler__c</fullName>
    <externalId>true</externalId>
    <label>Id Lead Profiler</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>