unpackaged/main/default/objects/User/fields/is_Data_Migration_User__c.field-meta.xml
<CustomField>
    <fullName>is_Data_Migration_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Permitir brincar reglas a los usuarios marcados como TRUE</description>
    <label>Es Usuario de Migración de Datos</label>
    <type>Checkbox</type>
</CustomField>