unpackaged/main/default/objects/User/fields/JMC_ContadorLeads__c.field-meta.xml
<CustomField>
    <fullName>JMC_ContadorLeads__c</fullName>
    <label>Contador de Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>