unpackaged/main/default/objects/User/fields/JMC_FechaActividadContador__c.field-meta.xml
<CustomField>
    <fullName>JMC_FechaActividadContador__c</fullName>
    <label>Fecha de Actividad del Contador</label>
    <type>Date</type>
</CustomField>