unpackaged/main/default/objects/User/fields/Porcentaje_RES__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_RES__c</fullName>
    <formula>(Cartera_RES__c * 100) / (Cartera_RES__c + Cartera_IS__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Porcentaje RES</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>