unpackaged/main/default/objects/User/fields/Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Proyecto__c</fullName>
    <label>Proyecto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ENFOQUE - PreProd</fullName>
            </value>
            <value>
                <fullName>ENFOQUE - Fresh</fullName>
            </value>
            <value>
                <fullName>ENFOQUE - Partial</fullName>
            </value>
            <value>
                <fullName>ENLACE - Partial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>