unpackaged/main/default/objects/User/fields/User_Mas_Comercial__c.field-meta.xml
<CustomField>
    <fullName>User_Mas_Comercial__c</fullName>
    <inlineHelpText>No borrar es LOGIN de mas comercial</inlineHelpText>
    <label>User Mas Comercial</label>
    <length>20</length>
    <type>Text</type>
</CustomField>