unpackaged/main/default/objects/User/fields/UserSharePoint__c.field-meta.xml
<CustomField>
    <fullName>UserSharePoint__c</fullName>
    <label>UserSharePoint</label>
    <length>50</length>
    <type>Text</type>
</CustomField>