unpackaged/main/default/objects/User/validationRules/Campos_Requeridos_Prospecto_Asesor.validationRule-meta.xml
<ValidationRule>
    <fullName>Campos_Requeridos_Prospecto_Asesor</fullName>
    <active>true</active>
    <errorConditionFormula>IF(Profile.Name=&quot;Prospecto Asesor&quot;, 
OR(  
ISBLANK(Fraccionamiento_autorizado__c),
ISBLANK(User_Mas_Comercial__c),  
ISBLANK(Id_Mas_Comercial__c)), NULL)</errorConditionFormula>
    <errorMessage>El perfil de Usuario es Prospecto Asesor, debe completar los campos 
User Mas Comercial, Id Mas Comercial, Fracc. Autorizados.</errorMessage>
</ValidationRule>