unpackaged/main/default/objects/User/listViews/Administrador_del_sistema.listView-meta.xml
<ListView>
    <fullName>Administrador_del_sistema</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>Admin</value>
    </filters>
    <label>Administrador del sistema</label>
    <language>en_US</language>
</ListView>