unpackaged/main/default/objects/User/listViews/Administradores_de_Venta.listView-meta.xml
<ListView>
    <fullName>Administradores_de_Venta</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.TITLE</field>
        <operation>equals</operation>
        <value>Admin Ventas</value>
    </filters>
    <label>Administradores de Venta</label>
    <language>en_US</language>
</ListView>