unpackaged/main/default/objects/User/listViews/AllUsers.listView-meta.xml
<ListView>
    <fullName>AllUsers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>MANAGER</columns>
    <columns>DELEGATED_APPROVER</columns>
    <columns>Fraccionamiento_autorizado__c</columns>
    <columns>FraccionamientoAutorizados__c</columns>
    <columns>UserSharePoint__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Todos los usuarios</label>
    <language>es_MX</language>
</ListView>