unpackaged/main/default/objects/User/listViews/Usuarios_Formalizador.listView-meta.xml
<ListView>
    <fullName>Usuarios_Formalizador</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Formalización</value>
    </filters>
    <label>Usuarios Formalizador</label>
    <language>en_US</language>
</ListView>