unpackaged/main/default/objects/User/listViews/Usuarios_PreProd.listView-meta.xml
<ListView>
    <fullName>Usuarios_PreProd</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>Proyecto__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proyecto__c</field>
        <operation>equals</operation>
        <value>ENFOQUE - PreProd</value>
    </filters>
    <label>Usuarios ENFOQUE - PREPROD</label>
    <language>en_US</language>
</ListView>